UDPATE: Makefile to use CXX

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,13 +6,13 @@
 #    By: zwong <zwong@student.42kl.edu.my>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/26 12:53:31 by zwong             #+#    #+#              #
-#    Updated: 2023/05/26 12:53:31 by zwong            ###   ########.fr        #
+#    Updated: 2023/06/05 12:11:10 by zwong            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = clapTrap
-COMPILER = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CXX = c++
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRCS = 	main.cpp ClapTrap.cpp
 
@@ -21,7 +21,7 @@ OBJS = $(SRCS:.cpp=.o)
 all : $(NAME)
 
 $(NAME) : $(OBJS) $(SRCS)
-	$(COMPILER) $(CFLAGS) $(OBJS) -o $@
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $@
 
 clean : 
 	rm $(OBJS)
